@@ -1,7 +1,7 @@
 /***************************************************************************/
 /*                                                                         */
 /*                               settings.c                                */
-/* Original code written by Daniel Hawkins. Last modified on 2014-05-25.   */
+/* Original code written by Daniel Hawkins. Last modified on 2014-05-29.   */
 /*                                                                         */
 /* The file defines the functions for handling settings.                   */
 /*                                                                         */
@@ -16,6 +16,8 @@ int init_settings(){
     settings.root_dirs = 0;
     settings.search_string = 0;
     settings.output_file = "searchResults.txt";
+    // Only log warning and higher by default
+    settings.min_log_level = WARNING;
     return 0;
 }
 
@@ -28,7 +30,7 @@ int free_settings(){
 int add_exclude_dir(char *newDir){
     DIR_LIST *newExclusion = init_dir_node(newDir);
     if (!newExclusion){
-        logError(ERROR, "Excluded directory %s not added to list.", newDir);
+        log_event(ERROR, "Excluded directory %s not added to list.", newDir);
         return -1;
     }
     link_dir_node(newExclusion, &settings.excluded_directories);
@@ -38,7 +40,7 @@ int add_exclude_dir(char *newDir){
 int add_root_dir(char *newDir){
     DIR_LIST *newRoot = init_dir_node(newDir);
     if (!newRoot){
-        logError(ERROR, "Root directory %s not added to list.", newDir);
+        log_event(ERROR, "Root directory %s not added to list.", newDir);
         return -1;
     }
     link_dir_node(newRoot, &settings.root_dirs);
